--- a/index.html
+++ b/index.html
@@ -15973,7 +15973,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <h2 is="h2-with-link" id="installation">Installation</h2>
       <section>
         <p>
-          See <a href="http://google.github.io/incremental-dom/">our Github</a>.
+          See <a href="https://github.com/google/incremental-dom">our Github</a>.
         </p>
         <p>
         </p>
