--- a/index.html
+++ b/index.html
@@ -16509,7 +16509,7 @@ patch(myElement, render, someData);
           Incremental DOM has two main strengths compared to virtual DOM based approaches:
           </p><ol>
             <li>
-              The incremental nature allows for significantly reduced memory allocation during render passes, allowing for more predictable perfromance.
+              The incremental nature allows for significantly reduced memory allocation during render passes, allowing for more predictable performance.
             </li>
             <li>
               It easily maps to template based approaches. Control statements and loops can be mixed freely with element and attribute declarations.
