--- a/perf/list/index.html
+++ b/perf/list/index.html
@@ -9,15 +9,19 @@
       import {CreationInnerHtml} from '../creation-innerhtml.js';
       import {ListRenderer} from './renderer.js';
       import {createTests} from '../create-tests.js';
+      import {runAddStart} from './add-start.js';
       import {runCreation} from './creation.js';
       import {runSelection} from './selection.js';
       import {runSelectionRaf} from './selection-raf.js';
+      import {runRemoveStart} from './remove-start.js';
 
       createTests(
         ListRenderer,
         [
           { name: 'selection', fn: runSelection },
           { name: 'selection_raf', fn: runSelectionRaf },
+          { name: 'remove_start', fn: runRemoveStart },
+          { name: 'add_start', fn: runAddStart },
           { name: 'creation', fn: runCreation }
         ],
         [
