--- a/index.html
+++ b/index.html
@@ -16499,6 +16499,17 @@ patch(myElement, render, someData);
           <a href="demo/customelement.html">Demo</a>
         </p>
       </section>
+
+
+      <section>
+        <h3 is="h3-with-link" id="demos/reorder-animation">Animating When Reordering Items</h3>
+        <p>
+          Incremental DOM simply creates and moves DOM nodes. There are no hooks for telling when an item moves or having any input into the process. You can use MutationObserver to tell when things move and do fancy things like animate when items move within a the list. Animating out deletions can be done using a two step proccess where you render the item (but mark it as deleted), then do a later render where the item is actually removed.
+        </p>
+        <p>
+          <a href="demo/reorder.html">Demo</a>
+        </p>
+      </section>
     </article>
 
 
